--- a/_config.yml
+++ b/_config.yml
@@ -56,8 +56,8 @@ kramdown:
 
 
 # 评论系统
-# Disqus（https://disqus.com/）
-# disqus_username: dandanger-salmon
+ #Disqus（https://disqus.com/）
+disqus_username: dandanger-salmon
 
 # Gitalk
 gitalk:
