--- a/_config.yml
+++ b/_config.yml
@@ -57,13 +57,13 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: yunchengzhang
+# disqus_username: yunchengzhang
 
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
+  clientID: 76bc8233d753222edd3b                            #生成的clientID
+  clientSecret: d764404be1efeca1e74806e58706cf088e2a06dd   #生成的clientSecret
   repo: dandanger-salmon.github.io    #仓库名称
   owner: dandanger-salmon    #github用户名
   admin: dandanger-salmon
